--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
     <div class="max-w-2xl mx-auto space-y-4">
       <div>
         <h3 class="font-semibold">Q: What is PixelMart?</h3>
-        <p>A: A Roblox-based company with innovative games and a growing community.</p>
+        <p>A: A Ro-Shopping company tailored to inhancing your shopping expirence in roblox.</p>
       </div>
       <div>
         <h3 class="font-semibold">Q: How can I join the community?</h3>
-        <p>A: You can join our Roblox group and Discord server.</p>
+        <p>A: You can join our Roblox group and Discord server. click the links button on the top right of this page </p>
       </div>
     </div>
   </section>
