--- a/index.html
+++ b/index.html
@@ -31,7 +31,25 @@
   <!-- Main Page -->
   <section id="home" class="page p-10 text-center bg-white hidden">
     <h2 class="text-4xl font-bold mb-4">Welcome to PixelMart</h2>
-    <p class="text-lg">A modern Roblox company focused on innovation and creativity.</p>
+    <p class="text-lg space-y-4">
+  <strong>Your #1 Roblox Shopping Destination</strong><br>
+  At PixelMart, we're changing virtual shopping. From fashionable avatar attire to extended in-game experiences, we provide you with a seamless blend of style, creativity, and community. We've designed our website for Roblox players who require more than a look – they require self-expression.
+</p>
+<p class="text-lg mt-4">
+  🎮 <strong>Explore Our Roblox Game:</strong><br>
+  Dive into Pixelmark V3 – a live shopping experience where you can try on apparel, hang out, and discover limited items that can only be discovered through our experience.
+</p>
+<p class="text-lg mt-4">
+  🛒 <strong>What We Offer:</strong><br>
+  - Limited-edition and affordable avatar clothing<br>
+  - Seasonal drops and limited-release collections<br>
+  - A fashion-forward community of Roblox players that's increasing in size rapidly<br>
+  - Group-only events, giveaways, and perks
+</p>
+<p class="text-lg mt-4">
+  🤝 <strong>Become a Member of the Community:</strong><br>
+  Be part of something more. No matter if you're a casual player or a serious fashionista, PixelMart has something for you.
+</p>
     <div class="mt-6 space-x-4">
       <a href="https://discord.gg/rvT2tEyDk7" target="_blank" class="bg-yellow-800 text-white px-4 py-2 rounded">Join Discord</a>
       <a href="https://www.roblox.com/communities/16031525/Pixelmark-PLC#!/about" target="_blank" class="bg-yellow-800 text-white px-4 py-2 rounded">Visit Roblox Group</a>
@@ -44,11 +62,11 @@
     <div class="max-w-2xl mx-auto space-y-4">
       <div>
         <h3 class="font-semibold">Q: What is PixelMart?</h3>
-        <p>A: A Ro-Shopping company tailored to inhancing your shopping expirence in roblox.</p>
+        <p>A: A Roblox-based company with innovative games and a growing community.</p>
       </div>
       <div>
         <h3 class="font-semibold">Q: How can I join the community?</h3>
-        <p>A: You can join our Roblox group and Discord server. click the links button on the top right of this page </p>
+        <p>A: You can join our Roblox group and Discord server.</p>
       </div>
     </div>
   </section>
