--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
     <div class="max-w-2xl mx-auto space-y-4">
       <div>
         <h3 class="font-semibold">Q: What is PixelMart?</h3>
-        <p>A: A Roblox-based company with innovative games and a growing community.</p>
+        <p>A: A Ro-shopping company and yoru number 1 Shopping destination.</p>
       </div>
       <div>
         <h3 class="font-semibold">Q: How can I join the community?</h3>
-        <p>A: You can join our Roblox group and Discord server.</p>
+        <p>A: You can join our Roblox group and Discord server. By using the links tab on the website top right </p>
       </div>
     </div>
   </section>
