--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>PixelMart</title>
+  <title>PixelMark</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <script>
     function showPage(pageId) {
@@ -18,7 +18,7 @@
   <!-- Header -->
   <header class="bg-yellow-900 text-white p-6">
     <div class="container mx-auto flex justify-between items-center">
-      <h1 class="text-3xl font-bold">PixelMart</h1>
+      <h1 class="text-3xl font-bold">PixelMark</h1>
       <nav class="space-x-4">
         <button onclick="showPage('home')" class="hover:underline">Home</button>
         <button onclick="showPage('qa')" class="hover:underline">Q&A</button>
@@ -30,10 +30,10 @@
 
   <!-- Main Page -->
   <section id="home" class="page p-10 text-center bg-white hidden">
-    <h2 class="text-4xl font-bold mb-4">Welcome to PixelMart</h2>
+    <h2 class="text-4xl font-bold mb-4">Welcome to PixelMark</h2>
     <p class="text-lg space-y-4">
   <strong>Your #1 Roblox Shopping Destination</strong><br>
-  At PixelMart, we're changing virtual shopping. From fashionable avatar attire to extended in-game experiences, we provide you with a seamless blend of style, creativity, and community. We've designed our website for Roblox players who require more than a look – they require self-expression.
+  At PixelMark, we're changing virtual shopping. From fashionable avatar attire to extended in-game experiences, we provide you with a seamless blend of style, creativity, and community. We've designed our website for Roblox players who require more than a look – they require self-expression.
 </p>
 <p class="text-lg mt-4">
   🎮 <strong>Explore Our Roblox Game:</strong><br>
@@ -48,7 +48,7 @@
 </p>
 <p class="text-lg mt-4">
   🤝 <strong>Become a Member of the Community:</strong><br>
-  Be part of something more. No matter if you're a casual player or a serious fashionista, PixelMart has something for you.
+  Be part of something more. No matter if you're a casual player or a serious fashionista, PixelMark has something for you.
 </p>
     <div class="mt-6 space-x-4">
       <a href="https://discord.gg/rvT2tEyDk7" target="_blank" class="bg-yellow-800 text-white px-4 py-2 rounded">Join Discord</a>
@@ -61,14 +61,18 @@
     <h2 class="text-3xl font-bold text-center mb-6">Q&A</h2>
     <div class="max-w-2xl mx-auto space-y-4">
       <div>
-        <h3 class="font-semibold">Q: What is PixelMart?</h3>
+        <h3 class="font-semibold">Q: What is PixelMark?</h3>
         <p>A: A Ro-shopping company and yoru number 1 Shopping destination.</p>
       </div>
       <div>
         <h3 class="font-semibold">Q: How can I join the community?</h3>
         <p>A: You can join our Roblox group and Discord server. By using the links tab on the website top right </p>
       </div>
+      </div>
+    <h3 class="font-semibold">Q: How do I Become Staff?</h3>
+    <p>A: Go onto our Application center which can be found on our links section.</p>
     </div>
+      </div>
   </section>
 
   <!-- Links Section -->
@@ -76,7 +80,10 @@
     <h2 class="text-3xl font-bold text-center mb-6">Links</h2>
     <div class="text-center space-y-4">
       <a href="https://www.roblox.com/communities/16031525/Pixelmark-PLC#!/about" target="_blank" class="block text-yellow-800 underline">Roblox Group</a>
-      <a href="https://www.roblox.com/games/18361728089/Pixelmark-V3" target="_blank" class="block text-yellow-800 underline">Main Game: Pixelmark V3</a>
+      <a href="https://www.roblox.com/games/18361728089/Pixelmark-V3" target="_blank" class="block text-yellow-800 underline">Pixelmark V3</a>
+      <a href="https://www.roblox.com/games/17395217964/Pixelmark-V2" target="_blank" class="blocj text-yellow-800 underlibe">Pixelmark V2</a>
+      <a href="https://www.roblox.com/games/16548464963/Pixelmark-V1" target="_blank" class="blocj text-yellow-800 underlibe">Pixelmark V1</a>
+      <a href="https://www.roblox.com/games/18405460868/Pixelmark-A-C" target="_blank" class="blocj text-yellow-800 underlibe">Pixelmark Application Center</a>
       <a href="https://discord.gg/rvT2tEyDk7" target="_blank" class="block text-yellow-800 underline">Discord Server</a>
     </div>
   </section>
