--- a/index.html
+++ b/index.html
@@ -33,29 +33,7 @@
     <div class="max-w-4xl mx-auto text-center space-y-6">
       <h2 class="text-4xl font-bold">Welcome to Pixelmark</h2>
       <p class="text-lg">
-        <strong>Your #1 Roblox Shopping Destination</strong><br>
-        At Pixelmark, we're changing virtual shopping. From fashionable avatar attire to extended in-game experiences,
-        we provide you with a seamless blend of style, creativity, and community. We've designed our website for Roblox
-        players who require more than a look – they require self-expression.
-      </p>
-      <p class="text-lg">
-        🎮 <strong>Explore Our Roblox Game:</strong><br>
-        Dive into Pixelmark V3 – a live shopping experience where you can try on apparel, hang out, and discover
-        limited items that can only be discovered through our experience.
-      </p>
-      <div class="text-left text-lg">
-        <p class="font-semibold">🛒 What We Offer:</p>
-        <ul class="list-disc list-inside pl-4">
-          <li>Limited-edition and affordable avatar clothing</li>
-          <li>Seasonal drops and limited-release collections</li>
-          <li>A fashion-forward community of Roblox players that's increasing in size rapidly</li>
-          <li>Group-only events, giveaways, and perks</li>
-        </ul>
-      </div>
-      <p class="text-lg">
-        🤝 <strong>Become a Member of the Community:</strong><br>
-        Be part of something more. No matter if you're a casual player or a serious fashionista, Pixelmark has something for you.
-      </p>
+        <strong>I (Felixpro202110) started Pixelmark PLC on May 24, 2023. Our team is dedicated to providing a great shopping experience. But more than that, Pixelmark PLC is a community. We're here to share, create, and have fun together. Thanks for joining us on this exciting journey! Our current Goal is to reach 100 Human Members, you can help us archive that Goal by joining or/and invite your Friends. </strong><br>
       <div class="space-x-4">
         <a href="https://discord.gg/rvT2tEyDk7" target="_blank" class="bg-yellow-800 text-white px-4 py-2 rounded">Join Discord</a>
         <a href="https://www.roblox.com/communities/16031525/Pixelmark-PLC#!/about" target="_blank" class="bg-yellow-800 text-white px-4 py-2 rounded">Visit Roblox Group</a>
