--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <button onclick="showPage('qa')" class="hover:underline">Q&A</button>
         <button onclick="showPage('links')" class="hover:underline">Links</button>
         <button onclick="showPage('support')" class="hover:underline">Support</button>
+        <button onclick="showPage('team')" class="hover:underline">Team</button>
       </nav>
     </div>
   </header>
@@ -79,9 +80,41 @@
     <p class="text-lg">Need help? Please join our <a href="https://discord.gg/rvT2tEyDk7" target="_blank" class="text-yellow-800 underline">Discord server</a> for support.</p>
   </section>
 
+  <!-- Team Section -->
+  <section id="team" class="page p-10 bg-white hidden">
+    <h2 class="text-4xl font-bold text-center mb-10">Our Team</h2>
+
+    <!-- S.L.T Section -->
+    <div class="mb-12">
+      <h3 class="text-2xl font-semibold mb-6 text-center">S.L.T (Senior Leadership Team)</h3>
+      <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-8 max-w-5xl mx-auto">
+        <div class="text-center">
+          <img src="https://www.roblox.com/headshot-thumbnail/image?userId=2821914904&width=100&height=100&format=png" alt="Felixpro202110" class="mx-auto rounded-full w-24 h-24">
+          <p class="mt-2 font-bold">Felixpro202110</p>
+          <p class="text-sm text-gray-600">Founder & CEO</p>
+        </div>
+        <!-- Add more S.L.T members here -->
+      </div>
+    </div>
+
+    <!-- D.T Section -->
+    <div>
+      <h3 class="text-2xl font-semibold mb-6 text-center">D.T (Development Team)</h3>
+      <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-8 max-w-5xl mx-auto">
+        <div class="text-center">
+          <img src="https://www.roblox.com/headshot-thumbnail/image?userId=12345678&width=100&height=100&format=png" alt="DevUser123" class="mx-auto rounded-full w-24 h-24">
+          <p class="mt-2 font-bold">DevUser123</p>
+          <p class="text-sm text-gray-600">Lead Developer</p>
+        </div>
+        <!-- Add more D.T members here -->
+      </div>
+    </div>
+  </section>
+
   <!-- Footer -->
   <footer class="bg-yellow-900 text-white text-center p-4">
     <p>&copy; 2025 Pixelmark. All rights reserved.</p>
   </footer>
 </body>
 </html>
+
