--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       <h3 class="text-2xl font-semibold mb-6 text-center">S.L.T (Senior Leadership Team)</h3>
       <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-8 max-w-5xl mx-auto">
         <div class="text-center">
-          <img src="https://www.roblox.com/headshot-thumbnail/image?userId=2821914904&width=100&height=100&format=png" alt="Felixpro202110" class="mx-auto rounded-full w-24 h-24">
+          <img src="https://tr.rbxcdn.com/30DAY-AvatarHeadshot-ACC2E27D14BB1ADA51C5C06F1F08414B-Png/150/150/AvatarHeadshot/Webp/noFilter" alt="Felixpro202110" class="mx-auto rounded-full w-24 h-24">
           <p class="mt-2 font-bold">Felixpro202110</p>
           <p class="text-sm text-gray-600">Founder & CEO</p>
         </div>
@@ -102,9 +102,9 @@
       <h3 class="text-2xl font-semibold mb-6 text-center">D.T (Development Team)</h3>
       <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-8 max-w-5xl mx-auto">
         <div class="text-center">
-          <img src="https://www.roblox.com/headshot-thumbnail/image?userId=12345678&width=100&height=100&format=png" alt="DevUser123" class="mx-auto rounded-full w-24 h-24">
-          <p class="mt-2 font-bold">DevUser123</p>
-          <p class="text-sm text-gray-600">Lead Developer</p>
+          <img src="https://tr.rbxcdn.com/30DAY-AvatarHeadshot-92D49209B8CB07D021D2228E8F6E3117-Png/150/150/AvatarHeadshot/Webp/noFilter" alt="DamianS201209" class="mx-auto rounded-full w-24 h-24">
+          <p class="mt-2 font-bold">DamianS201209</p>
+          <p class="text-sm text-gray-600">Junior Developer</p>
         </div>
         <!-- Add more D.T members here -->
       </div>
